samples/_failures_safe/1761040656_5a6f32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_997b1b10.c: In function ‘main’:
./samples/SAFE/__tmp_997b1b10.c:159:16: error: missing terminating " character
  159 |         printf("
      |                ^
./samples/SAFE/__tmp_997b1b10.c:159:9: error: expected expression at end of input
  159 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_997b1b10.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_997b1b10.c:159:9: error: expected declaration or statement at end of input
